--- a/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
+++ b/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
@@ -4,10 +4,10 @@
     "themachine_1 successMessageText": "Ты отлично справился!",
     "themachine_1 AFF_0": "Принести 15 жетонов BEAR",
     "themachine_2 name": "Отголоски из армы | A",
-    "themachine_2 description": "Мне нравится один пистолет, я бы сказал, что я его фанат. А так как ты неплохо себя показал, то я могу доверить тебе эту задачу. Найди мне 10 пистолетов ПМ, ну только не в нулину убитые, такие брать не буду. Я для тебя тоже кое-что подготовил.",
+    "themachine_2 description": "Мне нравится один пистолет, я бы сказал, что я его фанат. А так как ты неплохо себя показал, то я могу доверить тебе эту задачу. Найди мне пару пистолетов ПМ, ну только не в нулину убитые, такие брать не буду. Я для тебя тоже кое-что подготовил.",
     "themachine_2 successMessageText": "Ух какие хорошие. Благодарю за работу.",
     "themachine_2 location": "any",
-    "themachine_2 AFF_0": "Найти и передать 10 пистолетов ПМ",
+    "themachine_2 AFF_0": "Найти и передать 4 пистолета ПМ",
     "themachine_3 name": "Мастер гранат | B",
     "themachine_3 description": "Наемник, перед тобой стоит последний рубеж, чтобы доказать свою опытность, после этого поручения я позволю тебе стать профессиональным карателем. Для начала возьми ящик гранат, потому что тебе нужно устранить 5 типов гранатами РГО.",
     "themachine_3 successMessageText": "Сколько ты потратил времени на это? Отличная работа!",
