New quests and bugfixes

--- a/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
+++ b/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
@@ -48,21 +48,21 @@
     "themachine_10 AFF_1": "Устранить BigPipe в торс или живот выстрелом из RM 870",
     "themachine_10 AFF_2": "Устранить BirdEye в голову выстрелом из SR-25 на дистанции 30 метров и больше",
     "themachine_11 name": "Демонстрация силы 1 | D",
-    "themachine_11 description": "",
-    "themachine_11 successMessageText": "Excellent work! Shoreline should be safer now. Here's your reward as promised.",
+    "themachine_11 description": "Генг, любишь гонять на лабу? Не важно, сейчас твоя цель показать, что в руках профессионала любое оружие смертельное, независимо от снаряжения противника. На лабе пристрели несколько типов в тело.",
+    "themachine_11 successMessageText": "Шикарная работа, хочешь еще?",
     "themachine_11 AFF_0": "Устранить любые цели выстрелом из ПМ в торс или живот",
     "themachine_12 name": "Демонстрация силы 2 | D",
-    "themachine_12 description": "Ковбой",
-    "themachine_12 successMessageText": "за один рейд",
+    "themachine_12 description": "Ковбой, заряжай свой револьвер, завод соскучился за Диким Лесом. Это не побаночкам стрелять, но нужно хлопнуть несколько ребят за один заход. Выполняй",
+    "themachine_12 successMessageText": "...наповніть йому рот спермою за всіма законами фізики.",
     "themachine_12 AFF_0": "Уничтожить 5 целей из РШ-12 в ковбойской шляпе",
     "themachine_13 name": "Демонстрация силы 3 | D",
-    "themachine_13 description": "",
-    "themachine_13 successMessageText": "",
+    "themachine_13 description": "Помню когда-то собирал себе ферму и приходилось бегать в УЛЬТРу, там модник один постоянно мешал, не могу его терпеть. Ты знаешь что нужно делать.",
+    "themachine_13 successMessageText": "А вот это уже по-нашему. Отличная работа",
     "themachine_13 AFF_0": "Найти и передать 15 CPU",
     "themachine_13 AFF_1": "Устранить Киллу выстрелом из патрона .366 TKM Гекса в голову",
     "themachine_14 name": "Что такое безумие? | E",
-    "themachine_14 description": "I need someone to ensure the safety of our operations in Customs. Can you survive and protect the area? Your bravery won't go unrewarded.",
-    "themachine_14 successMessageText": "You've successfully completed your guard duty, ensuring the security of our operations. Here's your well-deserved reward.",
+    "themachine_14 description": "РА-ТА-ТА-ТА! Тебе знаком тинитус? Если нет, то ты с ним познакомишься, нужно почистить территорию от левых лиц. ПКМ, ПКМ - это идеальный выбор для такой работы. Нужно устранить 50 целей в любом уголке Таркова. Выполнняй.",
+    "themachine_14 successMessageText": "Ты не думал стать турелью? Держи заработанное",
     "themachine_14 AFF_0": "Устранить 50 целей выстрелом из ПКМ/ПКП",
     "themachine_15 name": "Кепка второго класса и уши Spynker`а | E",
     "themachine_15 description": "Prapor mentioned there is a green screen studio that isn't being used anymore somewhere in Customs. I need you to locate it and report back to me. Don't worry, I will make it worth your time.",
@@ -74,6 +74,9 @@
     "themachine_16 successMessageText": "",
     "themachine_16 AFF_0": "Устранить Knight ледорубом",
     "themachine_16 AFF_1": "Устранить BigPipe ледорубо",
-    "themachine_16 AFF_2": "Устранить BirdEye ледорубом"
-
+    "themachine_16 AFF_2": "Устранить BirdEye ледорубом",
+    "themachine_17 name": "Вероотступничество | B",
+    "themachine_17 description": "Генг, шептунов на Берегу много разошлось, не думал преподать им урок? А я думал, правда, твоими руками, ха-ха. Бери один из моих любимых пистолетов и стреляй по мишеням, но учти, что сделать надо все за один раз, чтобы они ахуели.",
+    "themachine_17 successMessageText": "Нахуй этих фанатиков! Держи заработанное!",
+    "themachine_17 AFF_0": "Устранить сектантов (главарь тоже считается) выстрелом из ПБ"
 }
