--- a/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
+++ b/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
@@ -65,18 +65,30 @@
     "themachine_14 successMessageText": "Ты не думал стать турелью? Держи заработанное",
     "themachine_14 AFF_0": "Устранить 50 целей выстрелом из ПКМ/ПКП",
     "themachine_15 name": "Кепка второго класса и уши Spynker`а | E",
-    "themachine_15 description": "Prapor mentioned there is a green screen studio that isn't being used anymore somewhere in Customs. I need you to locate it and report back to me. Don't worry, I will make it worth your time.",
-    "themachine_15 successMessageText": "So that's where it is... I knew you would find it. Here, you earned this.",
+    "themachine_15 description": "Слышал легенду о спрятанной армейской кепке? Некий чвк GayZZer, будучи на острове, выполнял задание о доставке кепки, но он был не один, кто хотел это сделать, поэтому GayZZer сделал схрон в лесу, но что-то пошло не так. А о чвк Spynk в курсе? Кратко: у него барахлят ComTac`и. Тебе надо найти спрятанную кепку, ну или снять с кого-то и обновить уши, две пары. На всякий случай.",
+    "themachine_15 successMessageText": "Да ты не просто киллер, ты еще и ищейка. Отлично сработано, генг!",
     "themachine_15 AFF_0": "Найти и передать уши  ComTac 4",
     "themachine_15 AFF_1": "Найти и передать Армейскую кепку (UCP)",
     "themachine_16 name": "Вершина пищевой цепочки | DC",
-    "themachine_16 description": "",
-    "themachine_16 successMessageText": "",
+    "themachine_16 description": "*",
+    "themachine_16 successMessageText": "*",
     "themachine_16 AFF_0": "Устранить Knight ледорубом",
     "themachine_16 AFF_1": "Устранить BigPipe ледорубо",
     "themachine_16 AFF_2": "Устранить BirdEye ледорубом",
     "themachine_17 name": "Вероотступничество | B",
     "themachine_17 description": "Генг, шептунов на Берегу много разошлось, не думал преподать им урок? А я думал, правда, твоими руками, ха-ха. Бери один из моих любимых пистолетов и стреляй по мишеням, но учти, что сделать надо все за один раз, чтобы они ахуели.",
     "themachine_17 successMessageText": "Нахуй этих фанатиков! Держи заработанное!",
-    "themachine_17 AFF_0": "Устранить сектантов (главарь тоже считается) выстрелом из ПБ"
+    "themachine_17 AFF_0": "Устранить сектантов (главарь тоже считается) выстрелом из ПБ",
+    "themachine_18 name": "Хирургическая точность",
+    "themachine_18 description": "*",
+    "themachine_18 successMessageText": "*",
+    "themachine_18 AFF_0": "Head",
+    "themachine_18 AFF_1": "Chest",
+    "themachine_18 AFF_2": "Stomach",
+    "themachine_18 AFF_3": "LeftArm",
+    "themachine_18 AFF_4": "LeftLeg",
+    "themachine_18 AFF_5": "RightArm",
+    "themachine_18 AFF_7": "blue card",
+    "themachine_18 AFF_8": "sanitar key"
+
 }
