--- a/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
+++ b/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
@@ -70,8 +70,8 @@
     "themachine_15 AFF_0": "Найти и передать уши  ComTac 4",
     "themachine_15 AFF_1": "Найти и передать Армейскую кепку (UCP)",
     "themachine_16 name": "Вершина пищевой цепочки | DC",
-    "themachine_16 description": "*",
-    "themachine_16 successMessageText": "*",
+    "themachine_16 description": "Подведем итоги твоей опытности. Запасись терпением и ледоколом, ведь начинается судный день для гунсов.",
+    "themachine_16 successMessageText": "Шикарная работа, генг!",
     "themachine_16 AFF_0": "Устранить Knight ледорубом",
     "themachine_16 AFF_1": "Устранить BigPipe ледорубо",
     "themachine_16 AFF_2": "Устранить BirdEye ледорубом",
@@ -80,15 +80,22 @@
     "themachine_17 successMessageText": "Нахуй этих фанатиков! Держи заработанное!",
     "themachine_17 AFF_0": "Устранить сектантов (главарь тоже считается) выстрелом из ПБ",
     "themachine_18 name": "Хирургическая точность | E",
-    "themachine_18 description": "*",
-    "themachine_18 successMessageText": "*",
-    "themachine_18 AFF_0": "Head",
-    "themachine_18 AFF_1": "Chest",
-    "themachine_18 AFF_2": "Stomach",
-    "themachine_18 AFF_3": "LeftArm",
-    "themachine_18 AFF_4": "LeftLeg",
-    "themachine_18 AFF_5": "RightArm",
-    "themachine_18 AFF_7": "blue card",
-    "themachine_18 AFF_8": "sanitar key",
-    "themachine_19 name": "Устранить 10 ЧВК ночью на любой локацииИспользовать только ПБ с глушителем"
+    "themachine_18 description": "Санитар остался одним из тех кого мы не трогали, пришло время отыграться по полной! Надевай сумку санитара и бери винтарь.",
+    "themachine_18 successMessageText": "Да ты настоящей хирург!",
+    "themachine_18 AFF_0": "Устранить Санитара выстрелом из Винтореза в голову",
+    "themachine_18 AFF_1": "Устранить Санитара выстрелом из Винтореза в торс",
+    "themachine_18 AFF_2": "Устранить Санитара выстрелом из Винтореза в живот",
+    "themachine_18 AFF_3": "Устранить Санитара выстрелом из Винтореза в левую руку",
+    "themachine_18 AFF_4": "Устранить Санитара выстрелом из Винтореза в левую ногу",
+    "themachine_18 AFF_5": "Устранить Санитара выстрелом из Винтореза в правую руку",
+    "themachine_18 AFF_7": "Устранить Санитара выстрелом из Винтореза в правую ногу",
+    "themachine_18 AFF_8": "Найти и передать ключ санитара",
+    "themachine_19 name": "Тень в кастрюле | E",
+    "themachine_19 description": "Ночь — твой союзник. В этот раз тебе нужно устранить 10 ЧВК ночью на Берегу, используя только ПБ с глушителем. Никаких фонариков и прицелов — только ты и тьма. Шучу, фонари и прицелы можно.",
+    "themachine_19 successMessageText": "Ты стал настоящей тенью, генг. Прекрасная работа!",
+    "themachine_19 AFF_0": "Устранить 10 ЧВК ночью на локации Берег выстрелом из ПБ с глушителем",
+    "themachine_20 name": "Карточный коллекционер | E",
+    "themachine_20 description": "Генг, а вот и крупная сделка. Без лишних слов - нужны все карты лабы, не важно из рейда или с барахолки. Взамен я дам тебе секретный контейнер.",
+    "themachine_20 successMessageText": "По рукам! Еще свидимся, удачи, генг!",
+    "themachine_20 AFF_0": "Head"
 }
