--- a/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
+++ b/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
@@ -19,9 +19,9 @@
     "themachine_4 AFF_1": "Найти и передать КШ",
     "themachine_4 AFF_2": "Устранить Штурмана выстрелом из ПМ",
     "themachine_5 name": "Недооцененная мощь | AS",
-    "themachine_5 description": "Генг, возможно, ты слышали байки про ПМ, что это легендарное оружие, способное творить такие вещи, что никому не слышалось? Так это были не байки. Вышибаешь мозги 4м дикусам с растояния 10+ метров за один рейд, выполняй.",
+    "themachine_5 description": "Генг, возможно, ты слышали байки про ПМ, что это легендарное оружие, способное творить такие вещи, что никому не слышалось? Так это были не байки. Вышибаешь мозги 4м дикусам с расстояния 10+ метров за один рейд, выполняй.",
     "themachine_5 successMessageText": "Генг, я верил в тебя, ты мне напоминаешь одного полковника, что учил меня стрелять.",
-    "themachine_5 AFF_0": "Устранить диких в голову с ПМ с растояния 10 метров и больше",
+    "themachine_5 AFF_0": "Устранить диких в голову с ПМ с расстояния 10 метров и больше",
     "themachine_6 name": "Приказ | B",
     "themachine_6 description": "Генг, мне не важно пендос ты или маскаль, но у меня есть контракт на отстрел бывших юсеков. Понимаешь к чему я клоню? Мне нужна одна черная карта лабы, один LEDX и десяток пропусков на лабу, а так же кончи 10 отступников. Половина награды твоя. Выполняй",
     "themachine_6 successMessageText": "Сегодня день без ног! Круто справился, генг, вот твоя доля.",
@@ -36,7 +36,7 @@
     "themachine_8 name": "Свои методы 1 | C",
     "themachine_8 description": "Генг, а ты Решалу знаешь? Конечно, что знаешь, бери свой ТТ и ставь хедшот парню за плохое поведение. Накажи этого выскочку, чтобы он боялся смотреть в твою сторону, ха-ха-ха. Голова, 15 метров, выстрел!",
     "themachine_8 successMessageText": "Классно ты с этим золотым мальчиком. Не расслабляйся, генг!",
-    "themachine_8 AFF_0": "Устранить Решалу выстрелом из ТТ (Золотой) в голову на растояния 15 метров и больше",
+    "themachine_8 AFF_0": "Устранить Решалу выстрелом из ТТ (Золотой) в голову на расстояния 15 метров и больше",
     "themachine_9 name": "Свои методы 2 | C",
     "themachine_9 description": "Есть убеждение, что быть убитым собственным оружием - это позор. Я предлагаю сделать хуже, бери у Егеря двухстволку и отстрели руки Тагилле, иначе так и останешься бегающим гвоздиком.",
     "themachine_9 successMessageText": "Красава, генг, полковник бы гордился тобой!",
@@ -93,7 +93,7 @@
     "themachine_19 name": "Тень в кастрюле | E",
     "themachine_19 description": "Ночь — твой союзник. В этот раз тебе нужно устранить 10 ЧВК ночью на Берегу, используя только ПБ с глушителем. Никаких фонариков и прицелов — только ты и тьма. Шучу, фонари и прицелы можно.",
     "themachine_19 successMessageText": "Ты стал настоящей тенью, генг. Прекрасная работа!",
-    "themachine_19 AFF_0": "Устранить 10 ЧВК ночью на локации Берег выстрелом из ПБ с глушителем",
+    "themachine_19 AFF_0": "Устранить 10 ЧВК ночью на локации Берег выстрелом из ПБ с глушителем с расстояния 10 метров и больше",
     "themachine_20 name": "Карточный коллекционер | E",
     "themachine_20 description": "Генг, а вот и крупная сделка. Без лишних слов - нужны все карты лабы, не важно из рейда или с барахолки. Взамен я дам тебе секретный контейнер.",
     "themachine_20 successMessageText": "По рукам! Еще свидимся, удачи, генг!",
