--- a/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
+++ b/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
@@ -80,7 +80,7 @@
     "Punisher_17 successMessageText": "Нахуй этих фанатиков! Держи заработанное!",
     "Punisher_17 AFF_0": "Устранить сектантов (главарь тоже считается) выстрелом из ПБ",
     "Punisher_18 name": "Хирургическая точность | E",
-    "Punisher_18 description": "Санитар остался одним из тех кого мы не трогали, пришло время отыграться по полной! Надевай сумку санитара и бери винтарь.",
+    "Punisher_18 description": "Санитар остался одним из тех, кого мы не трогали, пришло время отыграться по полной! Надевай сумку санитара и бери винтарь.",
     "Punisher_18 successMessageText": "Да ты настоящей хирург!",
     "Punisher_18 AFF_0": "Устранить Санитара выстрелом из Винтореза в голову",
     "Punisher_18 AFF_1": "Устранить Санитара выстрелом из Винтореза в торс",
