--- a/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
+++ b/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
@@ -73,7 +73,7 @@
     "Punisher_16 description": "Подведем итоги твоей опытности. Запасись терпением и ледоколом, ведь начинается судный день для гунсов.",
     "Punisher_16 successMessageText": "Шикарная работа, генг!",
     "Punisher_16 AFF_0": "Устранить Knight ледорубом",
-    "Punisher_16 AFF_1": "Устранить BigPipe ледорубо",
+    "Punisher_16 AFF_1": "Устранить BigPipe ледорубом",
     "Punisher_16 AFF_2": "Устранить BirdEye ледорубом",
     "Punisher_17 name": "Вероотступничество | B",
     "Punisher_17 description": "Генг, шептунов на Берегу много разошлось, не думал преподать им урок? А я думал, правда, твоими руками, ха-ха. Бери один из моих любимых пистолетов и стреляй по мишеням, но учти, что сделать надо все за один раз, чтобы они ахуели.",
@@ -88,7 +88,8 @@
     "Punisher_18 AFF_3": "Устранить Санитара выстрелом из Винтореза в левую руку",
     "Punisher_18 AFF_4": "Устранить Санитара выстрелом из Винтореза в левую ногу",
     "Punisher_18 AFF_5": "Устранить Санитара выстрелом из Винтореза в правую руку",
-    "Punisher_18 AFF_7": "Устранить Санитара выстрелом из Винтореза в правую ногу",
+    "Punisher_18 AFF_6": "Устранить Санитара выстрелом из Винтореза в правую ногу", 
+    "Punisher_18 AFF_7": " Найти и передать ключ-карту с синей маркировкой",
     "Punisher_18 AFF_8": "Найти и передать ключ санитара",
     "Punisher_19 name": "Тень в кастрюле | E",
     "Punisher_19 description": "Ночь — твой союзник. В этот раз тебе нужно устранить 10 ЧВК ночью на Берегу, используя только ПБ с глушителем. Никаких фонариков и прицелов — только ты и тьма. Шучу, фонари и прицелы можно.",
@@ -97,5 +98,10 @@
     "Punisher_20 name": "Карточный коллекционер | E",
     "Punisher_20 description": "Генг, а вот и крупная сделка. Без лишних слов - нужны все карты лабы, не важно из рейда или с барахолки. Взамен я дам тебе секретный контейнер.",
     "Punisher_20 successMessageText": "По рукам! Еще свидимся, удачи, генг!",
-    "Punisher_20 AFF_0": "Head"
+    "Punisher_20 AFF_0": "Принести Ключ-карту TerraGroup Labs (Синяя)",
+    "Punisher_20 AFF_1": "Принести Ключ-карту TerraGroup Labs (Желтая)",
+    "Punisher_20 AFF_2": "Принести Ключ-карту TerraGroup Labs (Зеленая)",
+    "Punisher_20 AFF_3": "Принести Ключ-карту TerraGroup Labs (Красная)",
+    "Punisher_20 AFF_4": "Принести Ключ-карту TerraGroup Labs (Черная)",
+    "Punisher_20 AFF_5": "Принести Ключ-карту TerraGroup Labs (Фиолетовая)"
 }
