Updated the terms and conditions of the tasks

--- a/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
+++ b/user/mods/Virtual's Custom Quest Loader/database/locales/ru/punisherRU.json
@@ -37,7 +37,7 @@
     "Punisher_8 description": "Генг, а ты Решалу знаешь? Конечно, что знаешь, бери свой ТТ и ставь хедшот парню за плохое поведение. Накажи этого выскочку, чтобы он боялся смотреть в твою сторону, ха-ха-ха. Голова, 15 метров, выстрел!",
     "Punisher_8 successMessageText": "Классно ты с этим золотым мальчиком. Не расслабляйся, генг!",
     "Punisher_8 AFF_0": "Устранить Решалу выстрелом из ТТ (Золотой) в голову на расстояния 15 метров и больше",
-    "Punisher_9 name": "Свои методы 2 | C",
+    "Punisher_9 name": "Свои методы 2 | С",
     "Punisher_9 description": "Есть убеждение, что быть убитым собственным оружием - это позор. Я предлагаю сделать хуже, бери у Егеря двухстволку и отстрели руки Тагилле, иначе так и останешься бегающим гвоздиком.",
     "Punisher_9 successMessageText": "Красава, генг, полковник бы гордился тобой!",
     "Punisher_9 AFF_0": "Устранить Тагиллу в правую или левую руку из MP-43-1C 12ga",
@@ -61,9 +61,9 @@
     "Punisher_13 AFF_0": "Найти и передать 15 CPU",
     "Punisher_13 AFF_1": "Устранить Киллу выстрелом из патрона .366 TKM Гекса в голову",
     "Punisher_14 name": "Что такое безумие? | E",
-    "Punisher_14 description": "РА-ТА-ТА-ТА! Тебе знаком тинитус? Если нет, то ты с ним познакомишься, нужно почистить территорию от левых лиц. ПКМ, ПКМ - это идеальный выбор для такой работы. Нужно устранить 50 целей в любом уголке Таркова. Выполнняй.",
+    "Punisher_14 description": "РА-ТА-ТА-ТА! Тебе знаком тинитус? Если нет, то ты с ним познакомишься, нужно почистить территорию от левых лиц. ПКМ, ПКМ - это идеальный выбор для такой работы. Нужно устранить 100 целей в любом уголке Таркова. Выполнняй.",
     "Punisher_14 successMessageText": "Ты не думал стать турелью? Держи заработанное",
-    "Punisher_14 AFF_0": "Устранить 50 целей выстрелом из ПКМ/ПКП",
+    "Punisher_14 AFF_0": "Устранить 100 целей выстрелом из ПКМ/ПКП",
     "Punisher_15 name": "Кепка второго класса и уши Spynker`а | E",
     "Punisher_15 description": "Слышал легенду о спрятанной армейской кепке? Некий чвк GayZZer, будучи на острове, выполнял задание о доставке кепки, но он был не один, кто хотел это сделать, поэтому GayZZer сделал схрон в лесу, но что-то пошло не так. А о чвк Spynk в курсе? Кратко: у него барахлят ComTac`и. Тебе надо найти спрятанную кепку, ну или снять с кого-то и обновить уши, две пары. На всякий случай.",
     "Punisher_15 successMessageText": "Да ты не просто киллер, ты еще и ищейка. Отлично сработано, генг!",
